# container-validator

./: .dockerignore  Dockerfile  README.md
OpenMS/contrib/: CMakeCache.txt  CMakeLists.txt  Makefile  README_contrib1.7.txt  macros.cmake
OpenMS/contrib/libraries.cmake/: boost.cmake  bzip2.cmake  coinor.cmake  eigen.cmake  glpk.cmake  gsl.cmake  libsvm.cmake  seqan.cmake  wildmagic.cmake  xercesc.cmake  zlib.cmake
OpenMS/contrib/patches/bzip2/: CMakeLists.txt
OpenMS/contrib/patches/coinor/: CbcEventHandler.hpp.diff  CoinLpIO.diff  CoinTypes.hpp.diff
OpenMS/contrib/patches/eigen/: EigenDetermineVSServicePack.cmake.patch
OpenMS/contrib/patches/gplk/: Makefile_VC  Win_config_VC
OpenMS/contrib/patches/gsl/: Makefile_in.diff  config.diff
OpenMS/contrib/patches/libsvm/: CMakeLists.txt  svm.cpp.diff_vs
OpenMS/contrib/patches/wildmagic/: Wm5Assert.cpp.patch  Wm5Assert.h.patch  Wm5CoreLIB.patch  Wm5Vector2.patch  libcore_CMakeLists.txt  libmath_CMakeLists.txt  root_CMakeLists.txt
OpenMS/contrib/patches/xercesc/: Version_VS11.diff  XercesDefs.hpp.diff  Xerces_autoconf_config.msvc.hpp.diff
OpenMS/contrib/patches/zlib/: zlib_cmakelists.diff
src/nmrML-validator/: FileInfo.ini  FileInfo.sh  index.php
